@@ -27,15 +27,25 @@ INSERT INTO DEPT2 VALUES (20, 'RESEARCH',   'DALLAS', 0, 1);
 INSERT INTO DEPT2 VALUES (30, 'SALES',      'CHICAGO', 0, 1);
 INSERT INTO DEPT2 VALUES (40, 'OPERATIONS', 'BOSTON', 0, 1);
 
-CREATE TABLE MyBEAN(ID INTEGER(2) NOT NULL PRIMARY KEY);
+CREATE TABLE MyBean(ID INTEGER(2) NOT NULL, AAA VARCHAR(20), BBB VARCHAR(20), CCC VARCHAR(20), DDD VARCHAR(20), PRIMARY KEY(ID));
 CREATE TABLE SEQTABLE(ID INTEGER NOT NULL PRIMARY KEY,NAME VARCHAR(20));
 
 CREATE TABLE DEFAULT_TABLE (ID INTEGER NOT NULL, AAA VARCHAR(20) DEFAULT 'ABC', BBB VARCHAR(20), VERSION_NO INTEGER NOT NULL, PRIMARY KEY (ID));
+INSERT INTO DEFAULT_TABLE(ID, VERSION_NO)  VALUES (-1, -1);
+
 CREATE TABLE PK_ONLY_TABLE (AAA INTEGER NOT NULL, BBB INTEGER NOT NULL, PRIMARY KEY (AAA, BBB));
+INSERT INTO PK_ONLY_TABLE VALUES ('AAA', 'BBBB');
 
 CREATE TABLE AAA(ID INTEGER NOT NULL PRIMARY KEY);
 CREATE TABLE BBB(ID INTEGER NOT NULL PRIMARY KEY);
 CREATE TABLE CCC(ID INTEGER NOT NULL PRIMARY KEY);
-CREATE TABLE DDD(ID INTEGER NOT NULL, NAME VARCHAR(2), PRIMARY KEY(ID,NAME));
-CREATE TABLE EEE(ID INTEGER NOT NULL, NAME VARCHAR(2), PRIMARY KEY(ID,NAME));
+CREATE TABLE DDD(ID INTEGER NOT NULL, NAME VARCHAR(2), PRIMARY KEY(ID, NAME));
+CREATE TABLE EEE(ID INTEGER NOT NULL, NAME VARCHAR(2), PRIMARY KEY(ID, NAME));
 CREATE TABLE FFF(ID INTEGER NOT NULL, VERSION INTEGER, UPDATED DATE, PRIMARY KEY(ID));
+
+INSERT INTO AAA VALUES(-1);
+INSERT INTO BBB VALUES(-1);
+INSERT INTO CCC VALUES(-1);
+INSERT INTO DDD VALUES(-1, 'DDD');
+INSERT INTO EEE VALUES(-1, 'EEE');
+INSERT INTO FFF VALUES(-1, -1, '1982-01-23');
