@@ -65,96 +65,7 @@ class S2Dao_DefaultImplTest  extends PHPUnit2_Framework_TestCase {
             $bean = $this->defaultTableDao->getDefaultTable($id);
             $this->assertEquals("1234567", $bean->getAaa(), "inserted setted value");
             $this->assertEquals("890", $bean->getBbb());
-            $this->assertEquals(0, $bean->getVersionNo());
-        }
-    }
-
-    public function testInsertBatchByAutoSqlTx() {
-        $bean1 = new DefaultTable();
-        $bean1->setAaa("11");
-        $bean1->setBbb("12");
-        $bean2 = new DefaultTable();
-        $bean2->setAaa("21");
-        $bean2->setBbb("22");
-
-        $ret = 0;
-        $ret += $this->defaultTableDao->insert($bean1);
-        $ret += $this->defaultTableDao->insert($bean2);
-        $this->assertEquals(2, $ret);
-
-        $defaultTables = $this->defaultTableDao->getDefaultTablesList();
-        $this->assertEquals(2, $defaultTables->size());
-        {
-            $object = $defaultTables->get(0);
-            $this->assertEquals("11", $object->getAaa());
-            $this->assertEquals("12", $object->getBbb());
-        }
-        {
-            $object = $defaultTables->get(1);
-            $this->assertEquals("21", $object->getAaa());
-            $this->assertEquals("22", $object->getBbb());
-        }
-    }
-
-    public function testInsertBatchDefaultByAutoSqlTx() {
-        $bean1 = new DefaultTable();
-        $bean1->setAaa("11");
-        $bean1->setBbb("12");
-        $bean2 = new DefaultTable();
-        $bean2->setAaa(null);
-        $bean2->setBbb("22");
-        $bean3 = new DefaultTable();
-        $bean3->setAaa("31");
-        $bean3->setBbb(null);
-        
-        $ret = 0;
-        $ret += $this->defaultTableDao->insert($bean1);
-        $ret += $this->defaultTableDao->insert($bean2);
-        $ret += $this->defaultTableDao->insert($bean3);
-        $this->assertEquals(3, $ret);
-
-        $defaultTables = $this->defaultTableDao->getDefaultTablesList();
-        $this->assertEquals(3, $defaultTables->size());
-        {
-            $object = $defaultTables->get(0);
-            $this->assertEquals("11", $object->getAaa());
-            $this->assertEquals("12", $object->getBbb());
-        }
-        {
-            $object = $defaultTables->get(1);
-            $this->assertEquals(null, $object->getAaa());
-            $this->assertEquals("22", $object->getBbb());
-        }
-        {
-            $object = $defaultTables->get(2);
-            $this->assertEquals("31", $object->getAaa());
-            $this->assertEquals(null, $object->getBbb());
-        }
-    }
-
-    public function testInsertBatchDefaultByAutoSql2Tx() {
-        $bean1 = new DefaultTable();
-        $bean1->setAaa("11");
-        $bean1->setBbb(null);
-        $bean2 = new DefaultTable();
-        $bean2->setAaa("21");
-        $bean2->setBbb("22");
-        $ret = 0;
-        $ret += $this->defaultTableDao->insert($bean1);
-        $ret += $this->defaultTableDao->insert($bean2);
-        $this->assertEquals(2, $ret);
-
-        $defaultTables = $this->defaultTableDao->getDefaultTablesList();
-        $this->assertEquals(2, $defaultTables->size());
-        {
-            $object = $defaultTables->get(0);
-            $this->assertEquals("11", $object->getAaa());
-            $this->assertEquals(null, $object->getBbb());
-        }
-        {
-            $object = $defaultTables->get(1);
-            $this->assertEquals("21", $object->getAaa());
-            $this->assertEquals("22", $object->getBbb());
+            $this->assertEquals(0, (int)$bean->getVersionNo());
         }
     }
 
@@ -162,15 +73,16 @@ class S2Dao_DefaultImplTest  extends PHPUnit2_Framework_TestCase {
         $id = 0;
         {
             $bean = new DefaultTable();
+            $bean->setAaa("ABC");
             $bean->setBbb("bbbb");
             $this->defaultTableDao->insert($bean);
             $id = $bean->getId();
         }
         {
             $bean = $this->defaultTableDao->getDefaultTable($id);
-            $this->assertEquals("ABC", $bean->getAaa(), "inserted DEFAULT value");
+            $this->assertEquals("ABC", $bean->getAaa());
             $this->assertEquals("bbbb", $bean->getBbb());
-            $this->assertEquals(0, $bean->getVersionNo());
+            $this->assertEquals(0, (int)$bean->getVersionNo());
         }
     }
 
@@ -179,7 +91,7 @@ class S2Dao_DefaultImplTest  extends PHPUnit2_Framework_TestCase {
         try {
             $this->defaultTableDao->insert($bean);
             $this->fail("should be thrown SRuntimeException, when only null properties");
-        } catch (S2Container_S2RuntimeException $e) {
+        } catch (Exception $e) {
             var_dump($e->getTraceAsString());
             $this->assertNotNull($e);
         }
@@ -197,7 +109,7 @@ class S2Dao_DefaultImplTest  extends PHPUnit2_Framework_TestCase {
             $bean = $this->defaultTableDao->getDefaultTable($id);
             $this->assertEquals("foooo", $bean->getAaa());
             $this->assertEquals(null, $bean->getBbb());
-            $this->assertEquals(0, $bean->getVersionNo());
+            $this->assertEquals(0, (int)$bean->getVersionNo());
         }
     }
 
@@ -205,6 +117,7 @@ class S2Dao_DefaultImplTest  extends PHPUnit2_Framework_TestCase {
         $id = 0;
         {
             $bean = new DefaultTable();
+            $bean->setAaa("ABC");
             $bean->setBbb("ttt");
             $this->defaultTableDao->insertBySql($bean);
             $id = $bean->getId();
@@ -213,7 +126,7 @@ class S2Dao_DefaultImplTest  extends PHPUnit2_Framework_TestCase {
             $bean = $this->defaultTableDao->getDefaultTable($id);
             $this->assertEquals("ABC", $bean->getAaa());
             $this->assertEquals("ttt", $bean->getBbb());
-            $this->assertEquals(0, $bean->getVersionNo());
+            $this->assertEquals(0, (int)$bean->getVersionNo());
         }
     }
 
@@ -223,7 +136,7 @@ class S2Dao_DefaultImplTest  extends PHPUnit2_Framework_TestCase {
         $bean->setBbb(456);
         $this->pkOnlyTableDao->insert($bean);
         $list = $this->pkOnlyTableDao->findAllList();
-        $this->assertEquals(1, $list->size());
+        $this->assertEquals(2, $list->size());
     }
 }
 
