@@ -57,7 +57,7 @@ class S2Dao_BeanMetaDataResultSetHandlerTest extends PHPUnit2_Framework_TestCase
 
     public function testHandle() {
         $handler = new S2Dao_BeanMetaDataResultSetHandler($this->bmd);
-        $sql = "select emp2.*, dept2.deptno as deptno_0, dept2.dname as dname_0 " .
+        $sql = "select emp2.*, dept2.deptno as DEPTNO_0, dept2.dname as DNAME_0 " .
                 "from EMP2 emp2, DEPT2 dept2 where emp2.empno = 7902 and emp2.deptno = dept2.deptno";
         $con = $this->getConnection();
         $ps = $con->prepare($sql);
@@ -84,11 +84,11 @@ class S2Dao_BeanMetaDataResultSetHandlerTest extends PHPUnit2_Framework_TestCase
         $dept = $ret->getDepartment();
         $this->assertNull($dept);
     }
-
+    
     public function testHandle3() {
         $handler = new S2Dao_BeanMetaDataResultSetHandler($this->bmd);
-        $sql = "select emp2.ename, dept2.dname as dname_0 " .
-                "from emp2, dept2 where emp2.empno = 7902 and emp2.deptno = dept2.deptno";
+        $sql = "select emp2.ename, dept2.deptno as DEPTNO_0, dept2.dname as DNAME_0 " .
+                "from emp2, dept2 where emp2.empno = 7788 and emp2.deptno = dept2.deptno";
         $con = $this->getConnection();
         $ps = $con->prepare($sql);
         $ps->execute();
